--- a/header.css
+++ b/header.css
@@ -1,36 +1,46 @@
-body{
-  background-color: rgb(40, 41, 51);
-  
-}
+
 
 
 header{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background-color: rgb(179, 178, 178);
-  
+  height: 60px;
+  padding-top: 15px;
+  background-color: grey;
 }
 
 .menu-icon{
-  height: 40px;
+  height: 45px;
+  margin-left: 30px;
+  
 }
 .left-header{
   display: flex;
   flex-direction: row;
-  background-color: white;
+  justify-content: center;
+  align-items: center;
 }
 
 .dextro{
-  margin-left: 40px;
+  margin-left: 25px;
   font-size: 40px;
-  color: grey;
+  color: aqua;
+  font-weight: 700;
+  margin-top: -10px;
+  animation:animateBg 5s linear infinite;
+
+
 }
 
-.right-header{
-  background-color: white;
-}
 
 .right-header img{
   height: 40px;
+  padding-right: 40px;
+}
+
+@keyframes animateBg {
+  100% {
+    filter:hue-rotate(360deg);
+  }
 }
