--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   align-items: center;
   height:100vh;
   width:100%;
-  background:url('https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700357903.jpg') no-repeat;
+  background:url('dist/png.png') no-repeat;
   background-size:cover;
   background-position:center;
   animation:animateBg 5s linear infinite;
@@ -42,7 +42,7 @@
   align-items: center;
   height:100vh;
   width:100%;
-  background:url('https://wallpaper-mania.com/wp-content/uploads/2018/09/High_resolution_wallpaper_background_ID_77700357903.jpg') no-repeat;
+  background:url('dist/png.png') no-repeat;
   background-size:cover;
   background-position:center;
   animation:animateBg 5s linear infinite;
